--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,2 +1,3 @@
-<%= javascript_pack_tag 'application' %>
-<%= react_component 'Admin', { meat: 'Meal' }, prerender: true %>
+<%= javascript_pack_tag 'index' %>
+<%= content_tag :div, id: 'props-data', data: {} do %>
+<% end %>
